Style: Reorganizando o nome e pastas do projeto

--- a/main/notebooks/Desafio_Ciencia_de_Dados_Gerdau.ipynb
+++ b/main/notebooks/Desafio_Ciencia_de_Dados_Gerdau.ipynb
@@ -14,7 +14,7 @@
    "id": "00cb4874-7ca0-4171-8ca3-e58720f78f9b",
    "metadata": {},
    "source": [
-    "<img src=\"./media/data_analytics.png\" alt=\"drawing\" width=\"200\"/> "
+    "<img src=\"../media/data_analytics.png\" alt=\"drawing\" width=\"200\"/> "
    ]
   },
   {
