--- a/main/notebooks/Desafio_Ciencia_de_Dados_Gerdau.ipynb
+++ b/main/notebooks/Desafio_Ciencia_de_Dados_Gerdau.ipynb
@@ -18,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "76565302-88c6-4666-a4c7-fe31aff0ba97",
    "metadata": {},
@@ -48,7 +49,7 @@
     "\n",
     "## **Objetivo**\n",
     "\n",
-    "A produção de uma empresa de aço envolve a fabricação de vários tipos de componentes, incluindo bobinas e placas. As informações sobre o consumo de energia são registradas em um sistema de armazenamento em nuvem. O monitoramento do consumo energético desta indústria está disponível nos dados fornecidos. Desta forma, **gostariamos que você prevea o consumo elétrico em uma perspectiva mensal**.\n"
+    "A produção de uma empresa de aço envolve a fabricação de vários tipos de componentes, incluindo bobinas e placas. As informações sobre o consumo de energia são registradas em um sistema de armazenamento em nuvem. O monitoramento do consumo energético desta indústria está disponível nos dados fornecidos. Desta forma, **gostariamos que você preveja o consumo elétrico em uma perspectiva mensal**.\n"
    ]
   },
   {
