--- a/main/notebooks/tratative.ipynb
+++ b/main/notebooks/tratative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4  Dia da Semana  Segunda-feira  Carga leve  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11722928"
+       "11722932"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +199,8 @@
       " 2   corrente_atrasada           35040 non-null  float64\n",
       " 3   corrente_principal          35040 non-null  float64\n",
       " 4   co2                         35040 non-null  float64\n",
-      " 5   potência_atrasado           35040 non-null  float64\n",
-      " 6   potência_principal          35040 non-null  float64\n",
+      " 5   potencia_atrasado           35040 non-null  float64\n",
+      " 6   potencia_principal          35040 non-null  float64\n",
       " 7   segundos_depois_meia_noite  35040 non-null  int64  \n",
       " 8   estado_semana               35040 non-null  object \n",
       " 9   dia_semana                  35040 non-null  object \n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
        "corrente_atrasada              1954\n",
        "corrente_principal              768\n",
        "co2                               8\n",
-       "potência_atrasado              5079\n",
-       "potência_principal             3366\n",
+       "potencia_atrasado              5079\n",
+       "potencia_principal             3366\n",
        "segundos_depois_meia_noite       96\n",
        "estado_semana                     2\n",
        "dia_semana                        7\n",
@@ -236,7 +236,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,12 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.data = df.data.astype('datetime64[ns]')\n",
-    "df.co2 = df.co2.astype('float32')\n",
+    "df.co2 = df.co2.astype('float16')\n",
     "df.segundos_depois_meia_noite = df.segundos_depois_meia_noite.astype('int32')\n",
     "df.estado_semana = df.estado_semana.astype('category')\n",
     "df.dia_semana = df.dia_semana.astype('category')\n",
@@ -261,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2068821"
+       "1998745"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -298,15 +298,15 @@
       " 1   consumo_energia             35040 non-null  float64       \n",
       " 2   corrente_atrasada           35040 non-null  float64       \n",
       " 3   corrente_principal          35040 non-null  float64       \n",
-      " 4   co2                         35040 non-null  float32       \n",
-      " 5   potência_atrasado           35040 non-null  float64       \n",
-      " 6   potência_principal          35040 non-null  float64       \n",
+      " 4   co2                         35040 non-null  float16       \n",
+      " 5   potencia_atrasado           35040 non-null  float64       \n",
+      " 6   potencia_principal          35040 non-null  float64       \n",
       " 7   segundos_depois_meia_noite  35040 non-null  int32         \n",
       " 8   estado_semana               35040 non-null  category      \n",
       " 9   dia_semana                  35040 non-null  category      \n",
       " 10  tipo_carga                  35040 non-null  category      \n",
-      "dtypes: category(3), datetime64[ns](1), float32(1), float64(5), int32(1)\n",
-      "memory usage: 2.0 MB\n"
+      "dtypes: category(3), datetime64[ns](1), float16(1), float64(5), int32(1)\n",
+      "memory usage: 1.9 MB\n"
      ]
     }
    ],
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 17.65% da memória original\n"
+      " 17.05% da memória original\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
