--- a/main/notebooks/model.ipynb
+++ b/main/notebooks/model.ipynb
@@ -1905,6 +1905,14 @@
    "source": [
     "## Conclusão"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dentre os modelos testados, o que apresentou o melhor resultado foi o SVR, porém o modelo de redes neurais apresentou um resultado melhor."
+   ]
   }
  ],
  "metadata": {
