--- a/main/notebooks/model.ipynb
+++ b/main/notebooks/model.ipynb
@@ -1911,7 +1911,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dentre os modelos testados, o que apresentou o melhor resultado foi o SVR, porém o modelo de redes neurais apresentou um resultado melhor."
+    "Dentre os modelos testados, o que apresentou o melhor resultado foi o SVR, porém o modelo de redes neurais apresentou um resultado melhor.\n",
+    "\n",
+    "Deve-se levar em consideração o custo de processamento de cada modelo, pois o modelo de redes neurais é mais custoso que o modelo de SVR."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Após o periodo de estresse e testes, poderá ser decidido junto ao time de negócio qual modelo será utilizado.\n",
+    "\n",
+    "Sua produção poderá ser feita em um container Docker, e utilizando algum serviço de Cloud (AWS, GCP, Azure) para sua hospedagem. Ou até mesmo em um servidor local."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agradecimentos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Equipe Ada (Professores e apoio)\n",
+    "- Gerdau\n",
+    "- Randstad"
    ]
   }
  ],
